fix: Resolve authentication and integration issues
- Fix 403 Forbidden error in user registration endpoint
- Repair JWT token storage and transmission in frontend
- Align frontend interfaces with backend ApiResponse format
- Add missing security configurations (CORS, JWT filter)
- Resolve deprecated Spring Security warnings
- Complete end-to-end functionality: register → login → post → feed

All core features now working: user management, post creation, feed display